--- a/docker/firebird25/Dockerfile
+++ b/docker/firebird25/Dockerfile
@@ -1,8 +1,7 @@
 FROM docker.io/ubuntu
 MAINTAINER Fábio Rodrigues Ribeiro <farribeiro@gmail.com>
 
-RUN apt-get update
-RUN apt-get install -y libstdc++5 firebird2.5-superclassic
+RUN apt-get update && apt-get install -y libstdc++5 firebird2.5-superclassic
 
 VOLUME /var/
 
