Unificado e quebrado em linhas

--- a/docker/ansible-fedora/Dockerfile
+++ b/docker/ansible-fedora/Dockerfile
@@ -1,7 +1,11 @@
-FROM docker.io/fedora
+FROM farribeiro/fedora
 MAINTAINER Fábio Rodrigues Ribeiro <farribeiro@gmail.com>
 
-RUN dnf update -y
-RUN dnf install ansible python-dnf libselinux-python -y
+RUN	\
+	dnf update -y \
+	&& dnf -y install \
+	ansible \
+	python-dnf \
+	libselinux-python
 
 WORKDIR /tmp/ansible
