--- a/docker/firebird25/Dockerfile
+++ b/docker/firebird25/Dockerfile
@@ -1,7 +1,12 @@
 FROM docker.io/ubuntu
 MAINTAINER Fábio Rodrigues Ribeiro <farribeiro@gmail.com>
 
-RUN apt-get update && apt-get install -y libstdc++5 firebird2.5-superclassic
+RUN	\
+	apt-get update \
+	&& apt-get upgrade -y
+RUN	apt-get install -y \
+	libstdc++5 \
+	firebird2.5-superclassic
 
 VOLUME /var/
 
