Comandos de provisionamento

--- a/docker/gummi-fedora/Dockerfile
+++ b/docker/gummi-fedora/Dockerfile
@@ -2,3 +2,11 @@ FROM fedora:latest
 
 COPY	startup.sh /
 
+RUN	dnf update -y \
+	&& dnf install -y gummi \
+	xauth \
+	texlive-*\
+	&& groupadd -g 1000 gummi \
+	&& useradd -u 1000 -g gummi gummi \
+	&& chmod +x startup.sh
+
