MAINTAINER foi depreciado

--- a/podman/ansible-fedora/Containerfile
+++ b/podman/ansible-fedora/Containerfile
@@ -1,6 +1,5 @@
 FROM fedora:latest
-
-MAINTAINER Fábio Rodrigues Ribeiro <farribeiro@gmail.com>
+LABEL maintainer "Fabio Rodrigues Ribeiro <farribeiro@gmail.com>"
 
 RUN	\
 	dnf update -y \
